# zj-cpp-runner

./: .clang-format  .cmake-format.py  .pre-commit-config.yaml  CMakeLists.txt  README.md  zj-pre-commit.bash  zj-setup.bash
.github/workflows/: cpp-build.yml
example1/: CMakeLists.txt
kitchen/: func.cpp  main.cpp
storage/: func.cpp  main.cpp
